--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "i": "^0.3.7",
     "mongoose": "^7.2.2",
+    "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "npm": "^9.7.1",
     "socket.io": "^4.6.1",
     "sweetalert2": "^11.7.10"
   }
