--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.0",
     "connect-mongo": "^5.0.0",
@@ -26,6 +27,7 @@
     "nodemon": "^2.0.22",
     "npm": "^9.7.1",
     "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.6.1",
