--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.0",
     "connect-mongo": "^5.0.0",
+    "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.2.2",
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
@@ -29,6 +31,7 @@
     "npm": "^9.7.1",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.6.1",
